--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,9 @@
     <header class="header">
       <div class="container main-nav">
         <nav class="navigation">
-          <a href="./index.html" class="logo link">Web<span class="logo-black">Studio</span></a>
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-black">Studio</span></a
+          >
           <ul class="site-nav list">
             <li class="item">
               <a href="./index.html" class="link">Студія</a>
@@ -36,18 +38,30 @@
         </nav>
         <ul class="auth-nav list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer nofollow" class="link">
+            <a
+              href="mailto:info@devstudio.com"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              class="link"
+            >
               <svg class="item-icon" width="16" height="12">
                 <use href="./img/svg/sprite.svg#icon-envelope"></use>
               </svg>
-              info@devstudio.com</a>
+              info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" target="_blank" rel="noopener noreferrer nofollow" class="link">
+            <a
+              href="tel:+380961111111"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              class="link"
+            >
               <svg class="item-icon" width="10" height="16">
                 <use href="./img/svg/sprite.svg#icon-smartphone"></use>
               </svg>
-              +38 096 111 11 11</a>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -100,7 +114,9 @@
                   height="294"
                 />
                 <div class="project-about">
-                  <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                  <h2 class="title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
                   <p class="text">Дизайн</p>
                 </div>
               </a>
@@ -170,7 +186,9 @@
                   height="294"
                 />
                 <div class="project-about">
-                  <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
+                  <h2 class="title">
+                    Видання <span lang="en">Limited Edition</span>
+                  </h2>
                   <p class="text">Дизайн</p>
                 </div>
               </a>
@@ -210,49 +228,80 @@
     <footer class="footer-page">
       <div class="container main-footer">
         <div class="adress">
-          <a href="./index.html" class="logo link">Web<span class="logo-white">Studio</span></a>
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-white">Studio</span></a
+          >
           <address>
             <ul class="list">
               <li class="list-item">
-                <a href="https://goo.gl/maps/879WaUZSCeZe2CB97" target="_blank" rel="noopener noreferrer nofollow"
-                  class="footer-adress link">м. Київ, пр-т Лесі Українки, 26</a>
+                <a
+                  href="https://goo.gl/maps/879WaUZSCeZe2CB97"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  class="footer-adress link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
               </li>
               <li class="list-item">
-                <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="footer-mail link"
+                  >info@devstudio.com</a
+                >
               </li>
               <li class="list-item">
-                <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="footer-tel link"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
         </div>
-    
+
         <div class="join">
           <p class="join-text">приєднуйтесь</p>
           <ul class="join-list list">
             <li class="join-item">
-              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link">
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link"
+              >
                 <svg class="join-icon">
                   <use href="./img/svg/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="join-item">
-              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link">
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link"
+              >
                 <svg class="join-icon">
                   <use href="./img/svg/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="join-item">
-              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link">
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link"
+              >
                 <svg class="join-icon">
                   <use href="./img/svg/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="join-item">
-              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="link">
+              <a
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link"
+              >
                 <svg class="join-icon">
                   <use href="./img/svg/sprite.svg#icon-linkedin"></use>
                 </svg>
