--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-instagram"></use>
@@ -193,7 +193,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-twitter"></use>
@@ -205,7 +205,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-facebook"></use>
@@ -217,7 +217,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-linkedin"></use>
@@ -243,7 +243,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-instagram"></use>
@@ -255,7 +255,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-twitter"></use>
@@ -267,7 +267,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-facebook"></use>
@@ -279,7 +279,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-linkedin"></use>
@@ -305,7 +305,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-instagram"></use>
@@ -317,7 +317,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-twitter"></use>
@@ -329,7 +329,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-facebook"></use>
@@ -341,7 +341,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-linkedin"></use>
@@ -367,7 +367,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-instagram"></use>
@@ -379,7 +379,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-twitter"></use>
@@ -391,7 +391,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-facebook"></use>
@@ -403,7 +403,7 @@
                       href=""
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      class="link"
+                      class="social-link link"
                     >
                       <svg class="social-icon">
                         <use href="./img/svg/sprite.svg#icon-linkedin"></use>
@@ -426,7 +426,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="clients-link link"
               >
                 <svg class="clients-logo">
                   <use href="./img/svg/sprite.svg#icon-client1"></use>
@@ -438,7 +438,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="clients-link link"
               >
                 <svg class="clients-logo">
                   <use href="./img/svg/sprite.svg#icon-client2"></use>
@@ -450,7 +450,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="clients-link link"
               >
                 <svg class="clients-logo">
                   <use href="./img/svg/sprite.svg#icon-client3"></use>
@@ -462,7 +462,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="clients-link link"
               >
                 <svg class="clients-logo">
                   <use href="./img/svg/sprite.svg#icon-client4"></use>
@@ -474,7 +474,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="clients-link link"
               >
                 <svg class="clients-logo">
                   <use href="./img/svg/sprite.svg#icon-client5"></use>
@@ -486,7 +486,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="clients-link link"
               >
                 <svg class="clients-logo">
                   <use href="./img/svg/sprite.svg#icon-client6"></use>
@@ -536,7 +536,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="join-link link"
               >
                 <svg class="join-icon">
                   <use href="./img/svg/sprite.svg#icon-instagram"></use>
@@ -548,7 +548,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="join-link link"
               >
                 <svg class="join-icon">
                   <use href="./img/svg/sprite.svg#icon-twitter"></use>
@@ -560,7 +560,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="join-link link"
               >
                 <svg class="join-icon">
                   <use href="./img/svg/sprite.svg#icon-facebook"></use>
@@ -572,7 +572,7 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
-                class="link"
+                class="join-link link"
               >
                 <svg class="join-icon">
                   <use href="./img/svg/sprite.svg#icon-linkedin"></use>
